<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/checkBoxApartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apartment" />

    <CheckBox
        android:id="@+id/checkBoxDetachedHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detached_home" />

    <CheckBox
        android:id="@+id/checkBoxSemiDetachedHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semi_detached_home" />

    <CheckBox
        android:id="@+id/checkBoxCondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condo" />

    <CheckBox
        android:id="@+id/checkBoxTownHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/town_house" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit" />
</LinearLayout>
