<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selected Homes"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radioGroupHomes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonApartment"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:text="@string/apartment" />

        <RadioButton
            android:id="@+id/radioButtonCondo"
            android:layout_width="397dp"
            android:layout_height="wrap_content"
            android:text="@string/condo" />

        <RadioButton
            android:id="@+id/radioButtonDetached"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:text="@string/detached_home" />

        <RadioButton
            android:id="@+id/radioButtonSemidetached"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:text="@string/semi_detached_home" />

        <RadioButton
            android:id="@+id/radioButtonTownhouse"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:text="@string/town_house" />



    </RadioGroup>

    <Button
        android:id="@+id/buttonProceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Proceed to Payment" />
</LinearLayout>
